LM - fixed overlap on tablet

--- a/app/assets/stylesheets/partials/_body.scss
+++ b/app/assets/stylesheets/partials/_body.scss
@@ -215,6 +215,12 @@ h2 {
     }
   }
 
+  &.voting {
+    .question-link{
+      margin-right: $grid-unit;
+    }
+  }
+
   .checkmark {
     margin: $grid-unit;
   }
